<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="point_list_edit">Edit</string>
    <string name="point_list_add">Add</string>
    <string name="point_list_delete">Delete</string>
    <string name="point_list_save">Save</string>
    <string name="app_name">The Orienteer</string>
    <string name="point_info_title">Title:</string>
    <string name="point_info_desc">Description:</string>
    
    <string name="my_location">My Location</string>
    <string name="user_mode">User Mode</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="start">Start</string>
    <string name="review">Review</string>
    <string name="checkin">Check In</string>
    <string name="set_password">Set Password</string>
    <string name="cfg_import">Import Config</string>
    <string name="cfg_export">Export Config</string>
    
    <string name="review_review">Review</string>
    <string name="review_check_point">Check Point</string>
    <string name="review_reach_time">Reach Time</string>
    <string name="review_time_cost">Time Cost</string>
</resources>

