<?xml version="1.0" encoding="utf-8"?>
<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <item android:id="@+id/my_location" android:title="@string/my_location" android:icon="@android:drawable/ic_menu_mylocation" android:showAsAction="always|withText" />
    <group android:id="@+id/user_group">
    	<item android:id="@+id/start" android:title="@string/start" android:icon="@android:drawable/ic_menu_mapmode" android:showAsAction="always|withText"></item>
    	<item android:id="@+id/checkin" android:title="@string/checkin" android:icon="@android:drawable/ic_menu_myplaces" android:showAsAction="always|withText" android:visible="false"></item>
    	<item android:id="@+id/review" android:title="@string/review" android:icon="@android:drawable/ic_menu_info_details" android:showAsAction="always|withText" android:visible="false"></item>
    	<item android:id="@+id/admin_mode" android:title="@string/admin_mode"></item>
    </group>
    <group android:id="@+id/admin_group" android:visible="false">
   		<item android:id="@+id/up" android:title="@string/up" android:showAsAction="always|withText" android:icon="@drawable/up" android:visible="false"></item>
   		<item android:id="@+id/down" android:title="@string/down" android:showAsAction="always|withText" android:icon="@drawable/down" android:visible="false"></item>
   		<item android:id="@+id/remove" android:title="@string/remove" android:icon="@android:drawable/ic_menu_delete" android:showAsAction="always|withText" android:visible="false"></item>
   		<item android:id="@+id/add" android:title="@string/add" android:icon="@android:drawable/ic_menu_add" android:showAsAction="always|withText"></item>
   		<item android:id="@+id/OK" android:title="@string/OK" android:icon="@android:drawable/ic_menu_save" android:showAsAction="always|withText" android:visible="false"></item>
   		<item android:id="@+id/cancel" android:title="@string/cancel" android:icon="@android:drawable/ic_menu_close_clear_cancel" android:showAsAction="always|withText" android:visible="false"></item>
    	<item android:id="@+id/user_mode" android:title="@string/user_mode"></item>
    	<item android:id="@+id/cfg_import" android:title="@string/cfg_import"></item>
    	<item android:id="@+id/cfg_export" android:title="@string/cfg_export"></item>
    </group>
</menu>
