<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/review_review" />

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/review_check_point" />

        <TextView
            android:gravity="left"
            android:padding="20dip"
            android:text="@string/review_reach_time" />

        <TextView
            android:gravity="left"
            android:text="@string/review_time_cost" />
    </TableRow>

</TableLayout>